Change portfolio functionality

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/portfolioedit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/portfolioedit.xhtml
@@ -39,7 +39,7 @@
 
                                     <p:steps id="progressbar" styleClass="portfolioCreationStepsPanel"
                                              activeIndex="#{tcmpb.pagemanager.page}">
-                                        <p:menuitem value="Option" />
+                                        <p:menuitem value="Selection" />
                                         <p:menuitem value="Start" />
                                         <p:menuitem value="Objective" />
                                         <p:menuitem value="Risk" />
