--- a/Invessence/modules/web/src/main/webapp/pages/consumer/ltam/edit/page1A.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/ltam/edit/page1A.xhtml
@@ -26,7 +26,7 @@
 
         <div class="Fright">
             <h1>
-                I am <pe:inputNumber styleClass="ltamInputText" style="width: 60px;" value="#{ceb.age}"
+                I am <p:inputNumber styleClass="ltamInputText" style="width: 60px;" value="#{ceb.age}"
                                      decimalPlaces="0" minValue="0" maxValue="110"
                                      required="true" requiredMessage="Age is required!"
                                      validatorMessage="Age should be between 18 and 100."/> years old.
