--- a/Invessence/modules/web/src/main/webapp/pages/consumer/invessence/addon/a2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/invessence/addon/a2.xhtml
@@ -28,46 +28,46 @@
                              style="border:0px !important; background:none;margin-bottom:10px" class="FormContent">
                     <div class="Wid90">Salary/Wages (Yearly)<br/>
                         <span style="font-size: small;">(Total Gross Income)</span></div>
-                    <pe:inputNumber value="#{cepb.householdwages}" styleClass="Wid90"
+                    <p:inputNumber value="#{cepb.householdwages}" styleClass="Wid90"
                                     maxlength="15" decimalPlaces="0" symbol="$">
                         <p:ajax listener="#{cepb.onChangeValue}"
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
-                    </pe:inputNumber>
+                    </p:inputNumber>
                     <div class="Wid90">
                         Total Expenses<br/>
                         <span style="font-size: small;">(Yearly)</span>
                     </div>
-                    <pe:inputNumber value="#{cepb.householdwages}" styleClass="Wid90"
+                    <p:inputNumber value="#{cepb.householdwages}" styleClass="Wid90"
                                     maxlength="15" decimalPlaces="0" symbol="$">
                         <p:ajax listener="#{cepb.onChangeValue}"
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
-                    </pe:inputNumber>
+                    </p:inputNumber>
 
                     <div class="Wid90">Liquid Asset<br/>
                         <span style="font-size: small;">(Cash/Savings Account, etc.)</span>
                     </div>
-                    <pe:inputNumber value="#{cepb.moneymarket}" styleClass="Wid90"
+                    <p:inputNumber value="#{cepb.moneymarket}" styleClass="Wid90"
                                     maxlength="15" decimalPlaces="0" symbol="$">
                         <p:ajax listener="#{cepb.onChangeValue}"
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
-                    </pe:inputNumber>
+                    </p:inputNumber>
                     <h:outputText styleClass="Wid90" value=""/>
                     <h:outputText styleClass="Wid90" value=""/>
 
                     <div class="Wid90">Other Investments<br/>
                         <span style="font-size: small;">(Stocks, Bond, Retirement)</span>
                     </div>
-                    <pe:inputNumber value="#{cepb.investment}"
+                    <p:inputNumber value="#{cepb.investment}"
                                     maxlength="15" decimalPlaces="0" symbol="$">
                         <p:ajax listener="#{cepb.onChangeValue}"
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
-                    </pe:inputNumber>
+                    </p:inputNumber>
                     <div class="Wid90">Total Debt</div>
-                    <pe:inputNumber value="#{cepb.otherDebt}"
+                    <p:inputNumber value="#{cepb.otherDebt}"
                                     maxlength="15" decimalPlaces="0" symbol="$">
                         <p:ajax listener="#{cepb.onChangeValue}"
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
-                    </pe:inputNumber>
+                    </p:inputNumber>
                 </h:panelGrid>
             </div>
         </div>
