--- a/Invessence/modules/web/src/main/webapp/pages/consumer/ltam/edit/page1.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/ltam/edit/page1.xhtml
@@ -27,7 +27,7 @@
 
         <div class="TexAlCenter">
             <h1>
-                I am <pe:inputNumber styleClass="ltamInputText input_wid1" style="width: 60px;" value="#{ceb.age}"
+                I am <p:inputNumber styleClass="ltamInputText input_wid1" style="width: 60px;" value="#{ceb.age}"
                                      decimalPlaces="0" minValue="0" maxValue="110"
                     required="true" requiredMessage="Age is required!"
                     validatorMessage="Age should be between 18 and 100."/> years old.
@@ -39,12 +39,12 @@
         <div class="TexAlCenter">
             <h1>
             I plan on investing
-            <pe:inputNumber styleClass="ltamInputText input_wid1"
+            <p:inputNumber styleClass="ltamInputText input_wid1"
                           value="#{ceb.investment}"
                           maxlength="11" decimalPlaces="0" symbol="$"
                     required="true" requiredMessage="Investment is required!"
                     validatorMessage="Min. of $500 investment is required!">
-            </pe:inputNumber>
+            </p:inputNumber>
 
             </h1>
             
